:hammer: :lipstick: fix layout shift by adding animation to remove action

--- a/src/Screen/Parallax/style.css
+++ b/src/Screen/Parallax/style.css
@@ -13,3 +13,9 @@
 .root-app > div:nth-child(2) {
   transform: translate(100vw, -100vh);
 }
+
+.removed-item {
+  transform: scaleY(0);
+  transform-origin: top center;
+  transition: transform 0.5s ease;
+}
